--- a/src/web/themes/custom/bcgov_teachers/scss/block/_subscription_form.scss
+++ b/src/web/themes/custom/bcgov_teachers/scss/block/_subscription_form.scss
@@ -37,11 +37,11 @@
     @media only screen and (max-width:767px){
       flex-wrap: wrap;
     }
-    @media only screen and (min-width:768px){
-      .form-wrapper{
-        padding-right: 5px;
-      }
-    }
+    // @media only screen and (min-width:768px){
+    //   .form-wrapper{
+    //     padding-right: 5px;
+    //   }
+    // }
   }
   .subscribe-wrapper{
     @media only screen and (max-width:767px){
@@ -65,17 +65,20 @@
     }
   }
   .form-item{
-    display: inline-block;
+    display: flex;
     vertical-align: middle;
     margin:0;
+    @media only screen and (max-width:767px) {
+      flex-direction: column;
+    }
     label, .description{display: none;}
   }
-  .form-actions{display: inline-block; margin: 0;
+  .form-actions{display: inline-block; margin: 0 0 0 10px;
     @media only screen and (max-width:767px) {
-      width: 100%;
+      width: 100%; margin:0;
    }
   }
-  
+
  input{
    border-radius: 0;
    min-height: 50px;
