--- a/src/web/themes/custom/bcgov_teachers/scss/navigation/_navbar.scss
+++ b/src/web/themes/custom/bcgov_teachers/scss/navigation/_navbar.scss
@@ -12,12 +12,16 @@ header {
       padding-left: 10px;
       padding-right: 10px;
 
+
       @media (min-width: 768px) {
         align-items: stretch;
 
         &:first-child {
           display: none;
         }
+      }
+      @media (max-width: 767px) {
+        max-width: 100%;
       }
 
       > .navbar-toggler {
